--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Cart/Index.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Cart/Index.cshtml
@@ -60,7 +60,8 @@ else
                                                         <form asp-action="RemoveFromCart" asp-controller="Cart" method="post">
                                                             <input type="hidden" name="cartId" value="@item.CartId" />
                                                             <input type="hidden" name="productId" value="@item.ProductId" />
-                                                            <button type="submit" value="Sepetten Çıkar" class="btn btn-danger"><i class="ti-close"></i></button>
+                                                            <input type="submit" class="btn btn-solid btn-xs" />
+                                                            
                                                         </form>
                                                     </h2>
                                                 </div>
