--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/UpdatePhone.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/UpdatePhone.cshtml
@@ -10,10 +10,15 @@
 <h2>Telefon Numarası Güncelle</h2>
 
 <form method="post">
-    <div class="form-group">
+    <div class="text-center form-group">
         <label for="PhoneNumber">Telefon Numarası</label>
         <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" value="@Model.PhoneNumber" required />
     </div>
     <button type="submit" class="btn btn-solid">Güncelle</button>
 </form>
 
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
