--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/WithDraw.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/WithDraw.cshtml
@@ -4,27 +4,43 @@
     ViewData["Title"] = "Withdraw";
     Layout = "_LayoutBase";
 }
+<div class="text-center row">
+    <div class="col-md-5 m-auto">
+        <h2>Bakiye Çek</h2>
+        @if (!ViewData.ModelState.IsValid)
+        {
+            foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+            {
+                <div class="alert alert-danger">
+                    @error.ErrorMessage
+                </div>
+            }
+        }
+        <form asp-action="Withdraw" asp-controller="Account" method="post">
+            <div class="form-group">
+                <label asp-for="Amount">Çekilecek Miktar</label>
+                <input asp-for="Amount" class="form-control" />
+                <span asp-validation-for="Amount" class="text-danger"></span>
+            </div>
 
-<h2>Bakiye Çek</h2>
+            <div class="form-group">
+                <label asp-for="RecipientName">Alıcı Adı Soyadı</label>
+                <input asp-for="RecipientName" class="form-control" />
+                <span asp-validation-for="RecipientName" class="text-danger"></span>
+            </div>
 
-<form asp-action="Withdraw" asp-controller="Account" method="post">
-    <div class="form-group">
-        <label asp-for="Amount">Çekilecek Miktar</label>
-        <input asp-for="Amount" class="form-control" />
-        <span asp-validation-for="Amount" class="text-danger"></span>
+            <div class="form-group">
+                <label asp-for="IBAN">IBAN</label>
+                <input asp-for="IBAN" class="form-control" />
+                <span asp-validation-for="IBAN" class="text-danger"></span>
+            </div>
+
+            <button type="submit" class="btn btn-solid">Çek</button>
+        </form>
     </div>
-
-    <div class="form-group">
-        <label asp-for="RecipientName">Alıcı Adı Soyadı</label>
-        <input asp-for="RecipientName" class="form-control" />
-        <span asp-validation-for="RecipientName" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="IBAN">IBAN</label>
-        <input asp-for="IBAN" class="form-control" />
-        <span asp-validation-for="IBAN" class="text-danger"></span>
-    </div>
-
-    <button type="submit" class="btn btn-solid">Çek</button>
-</form>
+</div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
