--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/WithdrawSuccess.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/WithdrawSuccess.cshtml
@@ -3,11 +3,11 @@
     Layout = "_LayoutBase";
 }
 
-<div class="container mt-5">
+<div class="text-center col-md-6 m-auto container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header bg-success text-white">
+                <div class="card-header text-white">
                     <h3>Para Çekme Başarılı</h3>
                 </div>
                 <div class="card-body">
